--- a/src/components/Team/style.module.css
+++ b/src/components/Team/style.module.css
@@ -50,7 +50,7 @@
 }
 
 .sub-header-1 {
-  font-family: 'Riffic Free', sans-serif;
+  font-family: "Riffic Free", sans-serif;
   font-size: 1.5rem;
 }
 
@@ -63,7 +63,7 @@
 }
 
 .main-header {
-  font-family: 'Riffic Free', sans-serif;
+  font-family: "Riffic Free", sans-serif;
   font-size: 6rem;
   color: #f6396f;
 }
@@ -81,7 +81,7 @@
 
 .team-card-description {
   font-size: 1.2rem;
-  font-family: 'Riffic Free', sans-serif;
+  font-family: "Riffic Free", sans-serif;
   margin-top: auto;
   max-height: 70px;
   overflow-y: auto;
@@ -90,6 +90,6 @@
 }
 
 .team-card-cluster {
-  font-family: 'Riffic Free', sans-serif;
+  font-family: "Riffic Free", sans-serif;
   color: #f6396f;
 }
