--- a/src/components/Homepage/style.module.css
+++ b/src/components/Homepage/style.module.css
@@ -7,6 +7,13 @@
   width: 100vw;
 }
 
+.banner {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+}
+
 .slide {
   width: 100vw;
   height: 100vh;
@@ -19,7 +26,7 @@
   transform: rotate(90deg) translateY(-100vh);
   transform-origin: top left;
   position: absolute;
-  max-width: 800vw;
+  overflow: hidden;
 }
 
 .one {
@@ -99,8 +106,7 @@
   height: 100vw;
   transform: rotate(-90deg) translateX(-100vh);
   transform-origin: top left;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
   position: absolute;
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -176,7 +182,6 @@
   position: absolute;
   top: 15vh;
   left: 35vw;
-  translate: translateX();
 }
 
 .event-wrapper {
@@ -223,6 +228,7 @@
   font-family: "Open Sans", sans-serif;
   position: relative;
   z-index: inherit;
+  padding-left: 4rem;
 }
 
 .eight > p {
