--- a/src/components/Leaderboard/style.module.css
+++ b/src/components/Leaderboard/style.module.css
@@ -42,18 +42,18 @@
   height: auto;
 }
 
-.leader-board-container {
-  border: solid 1px blue;
+.leader-board-wrapper {
+  display: flex;
+  width: 90vw;
+  justify-content: space-around;
+}
 
+.leader-board-container {
   /* display: flex; */
-  width: 60vw;
+  width: 40vw;
   position: relative;
 
   /* flex-wrap: nowrap; */
-}
-
-.leader-board-container * {
-  border: solid 1px green;
 }
 
 .leader-board {
@@ -62,11 +62,39 @@
   /* max-width: 50%; */
 }
 
-.leader-board-header {
+.leader-board-header, .leader-board-row {
   width: 100%;
   background-color: #262626;
-  height: 100px;
+  height: 60px;  
+  padding-left: 1rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border-radius: 5px;
+}
+
+.leader-board-row {
+  background-color: black;
+  /* height: 40px; */
+  border-bottom: solid 0.5px #666666;
+}
+
+.leader-board-header > div, .leader-board-row > div{
+  width: 100%;
+  font-size: 1.2rem;
+  font-family: "Riffic Free"; 
+}
+
+.leader-board-header > div:first-of-type, .leader-board-row > div:first-of-type {
+  width: 250px;
+}
+
+.dept-icon {
+  background: linear-gradient(180deg, #F9A714 0%, #F36F1D 100%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  display: inline-block;
+  transform: translateY(5px);
 }
